kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 8000
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: shared-volume
          mountPath: /homework
        - name: config
          mountPath: /homework/conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: shared-volume
        persistentVolumeClaim:
          claimName: pvc
      - name: config
        configMap:
          name: config
