kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: homework
  labels: 
    app: nginx
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: nginx
